@@ -61,6 +61,7 @@ public class TestSortMode {
     }
 
     @Test
+    // check that large-sort can sort a small alignment (only one split):
     public void sortSmall() throws IOException {
         SortMode mode = new SortMode();
         mode.setInput("test-data/alignment-hybrid-codec/EJOYQAZ-small.header");
@@ -68,7 +69,8 @@ public class TestSortMode {
         mode.setNumThreads(1);
         mode.setSplitSize(1 * 1024 * 1024);
         mode.execute();
-
+        // quick way to check the entries and header files were created. Since it is a checksum, if the test fails, it is possible
+        // content is correct, but written sligthly differently.
         assertEquals(1947630632, FileUtils.checksumCRC32(new File(FilenameUtils.concat(BASE_TEST_DIR, "EJOYQAZ-small-sorted.entries")))) ;
         assertEquals(1283804747, FileUtils.checksumCRC32(new File(FilenameUtils.concat(BASE_TEST_DIR, "EJOYQAZ-small-sorted.header")))) ;
     }
