@@ -1,5 +1,5 @@
 Towards Goby 2.0
- - Fix issues with the barcode-decode mode. Add support for processing fasta/fastq files.
+
  - Refactor AlignmentWriter to introduce an interface and make it easier to create facades that modify the behaviour
    of the default writer. For instance, such a facade is BufferedSortingAlignmentWriter, which keeps a number of entries
    in memory to re-sort these entries by genomic position. This feature is used when importing already sorted SAM/BAM
@@ -47,6 +47,7 @@ Towards Goby 2.0
  - Make it possible to open Goby alignments through HTTP. Simply specify a URL as a basename as argument to the goby
    tools. This is supported broadly by the API, so the concatenation reader also supports URLs, for instance. TMH files
    currently cannot be loaded remotely. Alignments that require upgrading will also fail to load remotely.
+ - Fix issues with the barcode-decode mode. Add support for processing fasta/fastq files.
  - vcf methylation format: removed space in name of C and Cm group INFO fields.
  - Add a draft implementation of random access sequence interface that can read a fasta file indexed with faidx.
  - Introduce chunk codecs for protocol buffer encoded collection messages (supports both reads and alignments).
